Implemented Get Product by URL Segment endpoint
